# hermes-spotlight

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.githooks/: pre-push
.github/workflows/: ci.yml
docs/: threat-model.md
scripts/: install-git-hooks.sh
src/spotlight_tool_output/: __init__.py  _cli.py  plugin.yaml
tests/: conftest.py  test_spotlight.py
