[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-spotlight"
version = "0.1.0"
description = "SpotLight prompt-injection defence for NousResearch/hermes-agent"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["hermes-agent", "prompt-injection", "security", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

[project.scripts]
hermes-spotlight = "spotlight_tool_output._cli:main"

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/spotlight_tool_output"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
